syntax = "proto3";

option csharp_namespace = "RetroShop_Server";

package user;

service UserSrv {
      rpc GetAll(Empty) returns (Users);
    rpc GetByUserName(UserNameFilter) returns (User);
    rpc Post(User) returns (User);
    rpc Put (User) returns (User);
    rpc Delete (UserNameFilter) returns (Empty);
}

message Empty {}

message User{
    int32 UserRowId=1;
    string Name =2;
    string SurName =3;
    string Dni=4;
    string Mail=5;
    string UserName=6;
    string Password=7;
}
message UserNameFilter{
    string UserName=1;
}

message Users{
    repeated User items=1;
}
